# clay_printing_controller

./: .coverage  .gitattributes  .gitignore  README.md  \  pyproject.toml
plc/Clay_Printing_Controller/: Clay_Printing_Controller.sln  README.md  README_PLC.md
plc/Clay_Printing_Controller/Clay_Printing_Controller/: Clay_Printing_Controller.tsproj
plc/Clay_Printing_Controller/Clay_Printing_Controller/Printing_Controller/: PlcTask.TcTTO  Printing_Controller.plcproj
plc/Clay_Printing_Controller/Clay_Printing_Controller/Printing_Controller/GVLs/: GVL.TcGVL  GVL_IO.TcGVL  GVL_LAP.TcGVL  README.TcGVL
plc/Clay_Printing_Controller/Clay_Printing_Controller/Printing_Controller/POUs/: FB_GetOutputData.TcPOU  FB_SetConfigData.TcPOU  FB_SetOutPutDataToIO.TcPOU  MAIN.TcPOU  P_Control_Mode.TcPOU  P_Laptop_Operate.TcPOU  P_Robot_Operate.TcPOU
plc/Clay_Printing_Controller/Clay_Printing_Controller/Printing_Controller/POUs/Component/: P_CC1_Enable.TcPOU  P_CP1_Check.TcPOU  P_CP1_Enable.TcPOU
plc/Clay_Printing_Controller/Clay_Printing_Controller/Printing_Controller/POUs/Func/: F_ScalAnalogOut.TcPOU
plc/Clay_Printing_Controller/Clay_Printing_Controller/Printing_Controller/POUs/Utils/: F_LowpassFilter.TcPOU  F_ScalAnalogOut.TcPOU
src/: __init__.py
src/clay_printing/: __main__.py  main.py
src/clay_printing/hal/: __init__.py  plc.py
src/tests/: test_plc.py
